--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,61 @@
-//
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-family: 'Open Sans Condensed', sans-serif;
+    background-color: #23292c;
+}
+
+header{
+    background-color: rgb(0, 68, 255);
+    padding: 30px 0;
+    text-align: center;
+}
+
+h1{
+    color: black;
+    font-size: 45px;
+}
+
+main{
+    background-color: #23292c;
+}
+
+.comics-container{
+    width: 80%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 30px 0;
+}
+
+.comic-card{
+    background-color: rgb(51, 53, 77);
+    padding: 30px;
+    width: calc(100% / 4 - 10px);
+    margin: 5px 5px;
+    color: white;
+    text-align: center;
+    border-radius: 5px;
+    h2{
+        text-transform: uppercase;
+        color: #F2ED38;
+        font-size: 30px;
+        margin-bottom: 20px;
+    }
+}
+
+.card-row{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid rgb(91, 95, 138);
+    margin-bottom: 10px;
+}
+
+.row-title{
+    font-weight: bold;
+    color: #50B9F2;
+}
