--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,16 +4,50 @@
   box-sizing: border-box;
 }
 
+html {
+  background-color: #23292c;
+}
+
 body {
   font-family: "Open Sans Condensed", sans-serif;
   background-color: #23292c;
   font-size: 18px;
 }
 
+.home-title {
+  padding-top: 30px;
+  text-align: center;
+  color: white;
+}
+
+.home-title h2 {
+  font-size: 45px;
+}
+
 header {
   background-color: #0044ff;
   padding: 30px 0;
-  text-align: center;
+}
+
+.top-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.menu-nav {
+  list-style-type: none;
+  padding: 0;
+}
+
+.menu-nav li {
+  display: inline-block;
+  padding-left: 30px;
+}
+
+.menu-nav li a {
+  font-size: 20px;
+  color: white;
 }
 
 h1 {
@@ -65,6 +99,7 @@ main {
 
 .form_container {
   color: white;
+  padding-top: 30px;
 }
 
 .form_container h2 {
