--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,16 +4,48 @@
     box-sizing: border-box;
 }
 
+html {
+    background-color: #23292c;
+} 
+
 body{
     font-family: 'Open Sans Condensed', sans-serif;
     background-color: #23292c;
     font-size: 18px;
 }
 
+.home-title{
+    padding-top: 30px;
+    text-align: center;
+    color: white;
+    h2{
+        font-size: 45px;
+    }
+}
+// header 
 header{
     background-color: rgb(0, 68, 255);
     padding: 30px 0;
-    text-align: center;
+}
+
+.top-nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.menu-nav{
+    list-style-type: none;
+    padding: 0;
+
+    li{
+        display: inline-block;
+        padding-left: 30px;
+        a{
+            font-size: 20px;
+            color: white;
+        }
+    }
 }
 
 h1{
@@ -64,6 +96,7 @@ main{
 
 .form_container{
     color: white;
+    padding-top: 30px;
     h2{
         margin-bottom: 30px;
         font-size: 30px;
