--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26,7 +26,7 @@ body {
 
 header {
   background-color: #0044ff;
-  padding: 30px 0;
+  padding: 30px 0px;
 }
 
 .top-nav {
@@ -105,5 +105,21 @@ main {
 .form_container h2 {
   margin-bottom: 30px;
   font-size: 30px;
+}
+
+#popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 30px;
+  border-radius: 5px;
+  display: none;
+}
+
+.warning {
+  font-size: 35px;
+  color: black;
 }
 
