--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -25,7 +25,7 @@ body{
 // header 
 header{
     background-color: rgb(0, 68, 255);
-    padding: 30px 0;
+    padding: 30px 0px;
 }
 
 .top-nav{
@@ -101,4 +101,20 @@ main{
         margin-bottom: 30px;
         font-size: 30px;
     }
+}
+
+#popup{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 30px;
+    border-radius: 5px;
+    display: none;
+}
+
+.warning{
+    font-size: 35px;  
+    color: black; 
 }
